--- a/alura book vick/index.html
+++ b/alura book vick/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> AluraBooks</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <h1>Alurabook</h1>
+    <header class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        <a href="#"><img src="img/Favorito.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compra"></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>"
+    </header>
 </body>
 
 </html>
